# neptune-wallet-app

./: README.md  package.json  taskfile.yml
.cargo/: config.toml
leveldb-sys/src/: lib.rs
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  gui.rs  lib.rs
src-tauri/src/command/: commands.rs
src-tauri/src/config/: consts.rs  mod.rs  wallet.rs
src-tauri/src/logger/: mod.rs
src-tauri/src/os/: mod.rs
src-tauri/src/prover/: mod.rs  proof_collection.rs  single_proof.rs
src-tauri/src/rpc/: block.rs  client.rs  commands.rs  error.rs  middleware.rs  mod.rs  transaction_status.rs
src-tauri/src/rpc/tls/: aes.rs  mod.rs
src-tauri/src/rpc_client/: mod.rs
src-tauri/src/service/: app.rs
src-tauri/src/session_store/: command.rs
src-tauri/src/wallet/: balance.rs  block.rs  block_cache.rs  fake_archival_state.rs  fork.rs  input.rs  key_cache.rs  keys.rs  mod.rs  pending.rs  proof_builder.rs  spend.rs  sync.rs  wallet_file.rs  wallet_state_table.rs
src-tauri/wallet-macros/: Cargo.toml
src-tauri/wallet-macros/src/: lib.rs
src/commands/: password.ts
src/components/navbar/: index.tsx
src/pages/about/: index.tsx
src/pages/batch/component/: selecte-contact.tsx
src/pages/create/: index.tsx
src/pages/create/component/: confirm-secret.tsx  create-password.tsx
src/pages/history/: index.tsx
src/pages/history/component/: activity-table-card.tsx  new-utxo-table.tsx
src/pages/home/: index.tsx
src/pages/import/component/: import-cecret.tsx  import-create-password.tsx
src/pages/lock/: index.tsx
src/pages/settings/component/: edit-remote-modal.tsx  reset-password-modal.tsx
src/pages/wallet/component/: block-sync-card.tsx  import-wallet.tsx  walletTable.tsx
src/routers/: index.tsx
src/store/: types.ts
src/store/auth/: auth-slice.ts
src/store/history/: history-slice.ts  hooks.ts
src/store/settings/: settings-slice.ts
