[workspace]
members = ["wallet-macros"]
resolver = "2"

[package]
name = "neptune-wallet"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "wallet"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }
chrono = "0.4.31"

[dependencies.neptune-cash]
git = "https://github.com/VxBlocks/neptune-wallet-core.git"
branch = "wallet"
default-features = false

[dependencies]
wallet-macros = { path = "./wallet-macros" }
tauri = { version = "2", features = [
    "macos-private-api",
    "tray-icon",
    "image-png",
], optional = true }

clipboard-ext = { version = "0.2.0", optional = true }
tauri-plugin-single-instance = { version = "2", optional = true }
tauri-plugin-shell = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }

anyhow = { version = "1.0", features = ["backtrace"] }
tokio = { version = "1.44.1", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "std",
    "env-filter",
    "time",
    "fmt",
] }
tokio-serde = { version = "0.8", features = ["bincode", "json"] }
tarpc = "0.34.0"
reqwest = { version = "0.12.15", features = ["json"] }
num-traits = "0.2.19"
clap = "4.5.32"
hyper = { version = "1.6.0", features = ["full"] }
aes-gcm = "0.10.3"
hkdf = "0.12.4"
p256 = { version = "0.13.2", features = ["ecdh"] }
sha2 = "0.10.8"
hyper-util = "0.1.10"
axum = "0.8.1"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
axum-extra = { version = "0.10.0", features = ["erased-json", "typed-header"] }
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
os_info = { version = "3.7.0", features = ["serde"] }
rand = "0.9.0"
hex = "0.4.3"
itertools = "0.14.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
sqlx_migrator = { version = "0.17.0", features = ["sqlite"] }
dialoguer = { version = "0.11.0", optional = true }
once_cell = "1.21.3"
rayon = "1.10.0"
dashmap = "6.1.0"
tauri-plugin-opener = "2"
zstd = "0.13.3"
openssl-sys = { version = "0.9.106", features = ["vendored"] }
thiserror = "2.0.12"
enum_dispatch = "0.3.13"
strum = "0.27.1"

[features]
default = ["custom-protocol", "gui"]
custom-protocol = ["tauri/custom-protocol"]
dev-release = []
gui = [
    "wallet-macros/gui",
    "dep:tauri",
    "dep:clipboard-ext",
    "dep:tauri-plugin-single-instance",
    "dep:tauri-plugin-shell",
    "dep:tauri-plugin-dialog",
    "dep:tauri-build",
]

cli = ["dep:dialoguer"]

[patch.crates-io]
leveldb-sys = { path = "../leveldb-sys" }
